--- a/projects/01/my-app/src/App.css
+++ b/projects/01/my-app/src/App.css
@@ -1,43 +1,21 @@
-.App {
-  text-align: center;
+#main p{
+  font-size: 16px;
+  line-height: 24px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#main h1, #main h2{
+  font-size: 24px;
+  line-height: 30px;
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.blue{
+  color: #4294d7;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container{
+  max-width: 1263px;
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-.svone li{
-    color: red;
-    list-style: none;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
