--- a/projects/01/my-app/src/components/Comments/Comment/Comment.module.css
+++ b/projects/01/my-app/src/components/Comments/Comment/Comment.module.css
@@ -1,9 +1,10 @@
 .comment{
     border-bottom: 1px solid #4762ce;
-    margin-bottom: 16px;
+    padding: 16px 0;
 }
 .comment:last-child{
     margin-bottom: 0;
+    border-bottom: none;
 }
 .person{
     display: inline-flex;
@@ -23,4 +24,8 @@
     object-fit: cover;
     margin-right: 16px;
     border-radius: 50%;
+}
+
+.comment p {
+    margin: 0;
 }
