--- a/projects/01/my-app/src/components/Nav/Nav.module.css
+++ b/projects/01/my-app/src/components/Nav/Nav.module.css
@@ -24,9 +24,18 @@
     line-height: 24px;
     text-decoration: none;
     font-style: italic;
-    color: #4294d7;
+    display: inline-block;
+    padding: 8px 18px;
+    border: 2px solid #8A93A8;
+    width: 100%;
+    border-radius: 12px;
 }
 
 .item a:hover{
-    text-decoration: underline;
+    background-color: #F1F6FB;
+}
+
+.item a.activeLink{
+    color: #3D7EFF;
+    border: 2px solid #3D7EFF;
 }
