--- a/projects/01/my-app/src/components/Profile/Profile.module.css
+++ b/projects/01/my-app/src/components/Profile/Profile.module.css
@@ -61,3 +61,35 @@
     border-radius: 12px;
 
 }
+
+.addPost{
+    display: flex;
+    background-color: #9e9b9b;
+    border-radius: 4px;
+    padding: 16px;
+    justify-content: space-between;
+    margin: 0 16px;
+}
+
+.addPost button{
+    padding: 4px 12px;
+    border-radius: 4px;
+    background-color: #e87a7a;
+    border: 1px solid #e87a7a;
+    color: #fff;
+    transition: 0.1s ease;
+}
+
+.addPost button:hover{
+    background-color: #fff;
+    color: #e87a7a;
+    transition: 0.1s ease;
+}
+
+.addPost input{
+    flex: 1;
+    margin-right: 32px;
+    border-radius: 4px;
+    border: 1px solid #fafafa;
+    padding: 4px;
+}
