--- a/projects/01/my-app/src/components/Users/Users.module.css
+++ b/projects/01/my-app/src/components/Users/Users.module.css
@@ -4,3 +4,14 @@
     object-fit: cover;
     border-radius: 50px;
 }
+
+.navigation span{
+    display: inline-block;
+    padding: 4px 16px;
+    font-size: 20px;
+    line-height: 24px;
+}
+
+.selectedPage{
+    color: #e87a7a;
+}
