--- a/projects/01/my-app/src/components/Header/Header.module.css
+++ b/projects/01/my-app/src/components/Header/Header.module.css
@@ -10,3 +10,14 @@
     color: #fff;
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+.link{
+    color: white;
+    padding: 16px;
+    font-size: 24px;
+    line-height: 29px;
+}
+
+.link:hover{
+    text-decoration: underline;
+}
