79 - React JS - stopSubmit (redux-form)

--- a/projects/01/my-app/src/components/Login/Login.module.css
+++ b/projects/01/my-app/src/components/Login/Login.module.css
@@ -40,3 +40,10 @@
 .form button:hover{
     background: linear-gradient(#607ef8, #4762ce);
 }
+
+.formSummaryError{
+    border: 1px solid #c17474;
+    font-weight: bold;
+    padding: 8px;
+    color: #c67f7f;
+}
