--- a/projects/01/my-app/src/components/common/Paginator/Paginator.module.css
+++ b/projects/01/my-app/src/components/common/Paginator/Paginator.module.css
@@ -1,3 +1,8 @@
+.navigation{
+    width: 100%;
+    margin: 20px auto;
+    text-align: center;
+}
 .navigation span{
     display: inline-block;
     padding: 4px 16px;
@@ -5,6 +10,11 @@
     line-height: 24px;
 }
 
-.selectedPage{
+.pageNumber{
+    padding: 2px;
+    border: 1px solid grey;
+}
+
+.pageNumber.selectedPage{
     color: #e87a7a;
 }
