--- a/projects/01/my-app/src/components/Profile/Profile.module.css
+++ b/projects/01/my-app/src/components/Profile/Profile.module.css
@@ -25,12 +25,6 @@
     margin-bottom: 16px;
 }
 
-.image img{
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-}
-
 .name{
     font-size: 24px;
     line-height: 32px;
@@ -96,4 +90,10 @@
 
 .status{
     padding: 16px;
+}
+
+.mainPhoto{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
 }
