97 - ReactJS - обновление профиля

--- a/projects/01/my-app/src/components/Profile/Profile.module.css
+++ b/projects/01/my-app/src/components/Profile/Profile.module.css
@@ -97,3 +97,9 @@
     height: 200px;
     object-fit: cover;
 }
+
+.formSummaryError{
+    color: red;
+    border: 1px solid red;
+    padding: 8px;
+}
